# BOM_DM

./: .gitignore  BOM_DB.spec  CHANGELOG.md  Makefile  README.md  Umeantech - Y76284A_Elbit_Land - BOM to VIVA.txt  _pytest_settings.toml  agents.example.toml  ast_check.py  bom_template.csv  compile_check.py  conftest.py  pyproject.toml  pytest.ini  repro_export_mdb.ps1  requirements.txt  run_gui.ps1  run_gui.sh
app/: ai_agents.py  api.py  auth.py  bom_schema.py  config.py  constants.py  database.py  db_safe_migrate.py  fx.py  main.py  migrate.py  models.py  pdf_utils.py  quote_utils.py  security.py  services.py  trace_utils.py
bom_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: app.db
docs/: bom_db_ce_integration.md  ce_activation.md  ce_bridge_api.md  ce_bridge_communication.md  ce_bridge_export.md  dev_setup.md
gui/: __init__.py  control_center.py
migrations/: env.py
scripts/: build_exe.ps1  build_exe.sh  create_admin.py  launch_gui.bat  launch_gui.sh  migrate_sqlite_bootstrap.py  migrate_test_defaults.py  setup.bat  setup.sh  smoke_api_test.py  smoke_mouser_scrape.py  tmp_req.py
tests/: conftest.py  test_api_bom_endpoints.py  test_asset_links.py  test_asset_tables.py  test_asset_uploads.py  test_auth.py  test_auth_smoke.py  test_autofill_integration.py  test_autofill_rules.py  test_big_datasheet.py  test_bom.py  test_bom_bootstrap.py  test_bom_crud.py  test_bom_import.py  test_bom_import_minimal.py  test_bom_import_price_blank.py  test_bom_import_refs_list.py  test_bom_import_refs_range.py  test_bom_import_xlsx.py  (+80 more)
(+109 files in other folders)
