# root: pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bom_platform"
version = "0.1.0"

[project.scripts]
bom-gui = "gui.control_center:main"

[project.optional-dependencies]
full = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "pymupdf",
    "python-multipart",
    "passlib[bcrypt]",
    "PyJWT",
    "openpyxl",
    "xlrd",
    "apscheduler",
    "requests",
    "httpx",
    "PySide6",
]

[tool.setuptools]
packages = ["app", "gui"]
