# root: pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bom_platform"
version = "0.1.0"

[project.scripts]
bom-gui = "gui.control_center:main"

[project.optional-dependencies]
full = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "pymupdf",
    "python-multipart",
    "passlib[bcrypt]",
    "PyJWT",
    "openpyxl>=3.1",
    "xlrd",
    "apscheduler",
    "requests>=2.31",
    "httpx",
    "requests_html",
    "pyppeteer",
    "PySide6",
    "PyQt6",
]

[tool.setuptools]
packages = ["app", "gui"]
